--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.44.3",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "router": "^1.3.8",
